add: position slice
